[gd_scene load_steps=19 format=3 uid="uid://xrlntx5vwr0u"]

[ext_resource type="Script" path="res://Scripts/Screens/posting_screen.gd" id="1_q6vn2"]
[ext_resource type="Material" uid="uid://806pw1w3og6q" path="res://Assets/Shaders/screen_shader.tres" id="2_tyaqy"]
[ext_resource type="Texture2D" uid="uid://codlodhonc1gr" path="res://Assets/WindowBorder/Window_Header.png" id="3_nrp4m"]
[ext_resource type="Texture2D" uid="uid://ra37oyj5pmyi" path="res://Assets/Icons/close.tres" id="4_aec3u"]
[ext_resource type="Texture2D" uid="uid://dowcimj8xqtpi" path="res://Assets/Icons/minimize.tres" id="5_lfsoh"]
[ext_resource type="Texture2D" uid="uid://kklcn6pm1w4w" path="res://Assets/Icons/maximize.tres" id="6_fkoga"]
[ext_resource type="Texture2D" uid="uid://3mrxu3vwjovp" path="res://Assets/WindowBorder/Teal_Title_Bar.png" id="7_6erf3"]
[ext_resource type="Texture2D" uid="uid://b0qhusj8oauym" path="res://Assets/WindowBorder/Lilac_Title_Bar.png" id="8_2b88u"]
[ext_resource type="Texture2D" uid="uid://c4imvdgrdyp4n" path="res://Assets/WindowBorder/Green_Title_Bar.png" id="9_4rfgw"]
[ext_resource type="Texture2D" uid="uid://h88v7k7hsdrg" path="res://Assets/Icons/icons-set-1_0000s_0049_Layer-141.png" id="10_evdpk"]
[ext_resource type="Texture2D" uid="uid://cp5iw76uqsbu6" path="res://Assets/Icons/Followers.png" id="11_bx4e6"]
[ext_resource type="Texture2D" uid="uid://tqab53wimuws" path="res://Assets/Icons/icons-set-1_0000s_0007_Layer-99.png" id="12_k8odw"]
[ext_resource type="Texture2D" uid="uid://h7w605384e5g" path="res://Assets/WindowBorder/Orange_Title_Bar.png" id="13_hfe6p"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ohb24"]
texture = ExtResource("3_nrp4m")
texture_margin_left = 8.0
texture_margin_top = 8.0
texture_margin_right = 8.0
texture_margin_bottom = 8.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_y3aue"]
texture = ExtResource("7_6erf3")
texture_margin_left = 8.0
texture_margin_top = 8.0
texture_margin_right = 8.0
texture_margin_bottom = 8.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_618sc"]
texture = ExtResource("8_2b88u")
texture_margin_left = 8.0
texture_margin_top = 8.0
texture_margin_right = 8.0
texture_margin_bottom = 8.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ahd5p"]
texture = ExtResource("9_4rfgw")
texture_margin_left = 8.0
texture_margin_top = 8.0
texture_margin_right = 8.0
texture_margin_bottom = 8.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_scqh7"]
texture = ExtResource("13_hfe6p")
texture_margin_left = 8.0
texture_margin_top = 8.0
texture_margin_right = 8.0
texture_margin_bottom = 8.0

[node name="PostingScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_q6vn2")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
z_index = 6
material = ExtResource("2_tyaqy")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Background" type="PanelContainer" parent="CanvasLayer"]
clip_contents = true
custom_minimum_size = Vector2(1916, 1080)
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -958.0
offset_right = 958.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 6
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Background"]
layout_mode = 2
size_flags_horizontal = 4

[node name="WindowToolBar" type="PanelContainer" parent="CanvasLayer/Background/VBoxContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_ohb24")

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Background/VBoxContainer/WindowToolBar"]
layout_mode = 2

[node name="Close" type="Button" parent="CanvasLayer/Background/VBoxContainer/WindowToolBar/HBoxContainer"]
layout_mode = 2
icon = ExtResource("4_aec3u")

[node name="Minimize" type="Button" parent="CanvasLayer/Background/VBoxContainer/WindowToolBar/HBoxContainer"]
layout_mode = 2
icon = ExtResource("5_lfsoh")

[node name="Maximize" type="Button" parent="CanvasLayer/Background/VBoxContainer/WindowToolBar/HBoxContainer"]
layout_mode = 2
icon = ExtResource("6_fkoga")

[node name="ToolBar" type="PanelContainer" parent="CanvasLayer/Background/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Background/VBoxContainer/ToolBar"]
layout_mode = 2

[node name="Home" type="Button" parent="CanvasLayer/Background/VBoxContainer/ToolBar/HBoxContainer"]
layout_mode = 2
text = "Home"
expand_icon = true

[node name="Save" type="Button" parent="CanvasLayer/Background/VBoxContainer/ToolBar/HBoxContainer"]
layout_mode = 2
text = "Save"

[node name="Settings" type="Button" parent="CanvasLayer/Background/VBoxContainer/ToolBar/HBoxContainer"]
layout_mode = 2
text = "Settings"

[node name="Help" type="Button" parent="CanvasLayer/Background/VBoxContainer/ToolBar/HBoxContainer"]
layout_mode = 2
text = "Help"

[node name="Day" type="Label" parent="CanvasLayer/Background/VBoxContainer/ToolBar/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 10
text = "Day 1"

[node name="MainArea" type="HBoxContainer" parent="CanvasLayer/Background/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3

[node name="InteractiveZone" type="VBoxContainer" parent="CanvasLayer/Background/VBoxContainer/MainArea"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_stretch_ratio = 3.0

[node name="PostSpace" type="VBoxContainer" parent="CanvasLayer/Background/VBoxContainer/MainArea/InteractiveZone"]
layout_mode = 2
size_flags_vertical = 3

[node name="PostSpaceTitle" type="PanelContainer" parent="CanvasLayer/Background/VBoxContainer/MainArea/InteractiveZone/PostSpace"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_y3aue")

[node name="Label" type="Label" parent="CanvasLayer/Background/VBoxContainer/MainArea/InteractiveZone/PostSpace/PostSpaceTitle"]
layout_mode = 2
text = "Post Space"
horizontal_alignment = 1

[node name="PostSpaceBody" type="PanelContainer" parent="CanvasLayer/Background/VBoxContainer/MainArea/InteractiveZone/PostSpace"]
layout_mode = 2
size_flags_vertical = 3
theme_type_variation = &"BackgroundPanel"

[node name="PostOrder" type="HBoxContainer" parent="CanvasLayer/Background/VBoxContainer/MainArea/InteractiveZone/PostSpace/PostSpaceBody"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4

[node name="Post1" type="PanelContainer" parent="CanvasLayer/Background/VBoxContainer/MainArea/InteractiveZone/PostSpace/PostSpaceBody/PostOrder"]
custom_minimum_size = Vector2(278, 279)
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"EmptyPanel"

[node name="Post2" type="PanelContainer" parent="CanvasLayer/Background/VBoxContainer/MainArea/InteractiveZone/PostSpace/PostSpaceBody/PostOrder"]
custom_minimum_size = Vector2(278, 2.08165e-12)
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"EmptyPanel"

[node name="Post3" type="PanelContainer" parent="CanvasLayer/Background/VBoxContainer/MainArea/InteractiveZone/PostSpace/PostSpaceBody/PostOrder"]
custom_minimum_size = Vector2(278, 2.08165e-12)
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"EmptyPanel"

[node name="Post4" type="PanelContainer" parent="CanvasLayer/Background/VBoxContainer/MainArea/InteractiveZone/PostSpace/PostSpaceBody/PostOrder"]
custom_minimum_size = Vector2(278, 2.08165e-12)
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"EmptyPanel"

[node name="Post5" type="PanelContainer" parent="CanvasLayer/Background/VBoxContainer/MainArea/InteractiveZone/PostSpace/PostSpaceBody/PostOrder"]
custom_minimum_size = Vector2(278, 2.08165e-12)
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"EmptyPanel"

[node name="PostSelection" type="VBoxContainer" parent="CanvasLayer/Background/VBoxContainer/MainArea/InteractiveZone"]
layout_mode = 2
size_flags_vertical = 3

[node name="PostSelectionTitle" type="PanelContainer" parent="CanvasLayer/Background/VBoxContainer/MainArea/InteractiveZone/PostSelection"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_618sc")

[node name="Label" type="Label" parent="CanvasLayer/Background/VBoxContainer/MainArea/InteractiveZone/PostSelection/PostSelectionTitle"]
layout_mode = 2
text = "Post Selection"
horizontal_alignment = 1

[node name="PostSelectionBody" type="PanelContainer" parent="CanvasLayer/Background/VBoxContainer/MainArea/InteractiveZone/PostSelection"]
layout_mode = 2
size_flags_vertical = 3
theme_type_variation = &"BackgroundPanel"

[node name="PostSelection" type="HBoxContainer" parent="CanvasLayer/Background/VBoxContainer/MainArea/InteractiveZone/PostSelection/PostSelectionBody"]
unique_name_in_owner = true
layout_mode = 2

[node name="Redraw" type="Button" parent="CanvasLayer/Background/VBoxContainer/MainArea/InteractiveZone/PostSelection/PostSelectionBody/PostSelection"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
text = " Redraw"

[node name="Post1" type="PanelContainer" parent="CanvasLayer/Background/VBoxContainer/MainArea/InteractiveZone/PostSelection/PostSelectionBody/PostSelection"]
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"EmptyPanel"

[node name="Post2" type="PanelContainer" parent="CanvasLayer/Background/VBoxContainer/MainArea/InteractiveZone/PostSelection/PostSelectionBody/PostSelection"]
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"EmptyPanel"

[node name="Post3" type="PanelContainer" parent="CanvasLayer/Background/VBoxContainer/MainArea/InteractiveZone/PostSelection/PostSelectionBody/PostSelection"]
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"EmptyPanel"

[node name="Post!" type="Button" parent="CanvasLayer/Background/VBoxContainer/MainArea/InteractiveZone/PostSelection/PostSelectionBody/PostSelection"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
text = " Post! "

[node name="DataSideBar" type="VBoxContainer" parent="CanvasLayer/Background/VBoxContainer/MainArea"]
layout_mode = 2
size_flags_horizontal = 6

[node name="Resources" type="VBoxContainer" parent="CanvasLayer/Background/VBoxContainer/MainArea/DataSideBar"]
layout_mode = 2
size_flags_vertical = 3

[node name="ResourcesTitle" type="PanelContainer" parent="CanvasLayer/Background/VBoxContainer/MainArea/DataSideBar/Resources"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_ahd5p")

[node name="Label" type="Label" parent="CanvasLayer/Background/VBoxContainer/MainArea/DataSideBar/Resources/ResourcesTitle"]
layout_mode = 2
text = "Resources"
horizontal_alignment = 1

[node name="ResourcesBody" type="PanelContainer" parent="CanvasLayer/Background/VBoxContainer/MainArea/DataSideBar/Resources"]
layout_mode = 2
size_flags_vertical = 3
theme_type_variation = &"EmptyPanel"

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/Background/VBoxContainer/MainArea/DataSideBar/Resources/ResourcesBody"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_bottom = 16

[node name="GridContainer" type="GridContainer" parent="CanvasLayer/Background/VBoxContainer/MainArea/DataSideBar/Resources/ResourcesBody/MarginContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/h_separation = 30
theme_override_constants/v_separation = 30
columns = 2

[node name="Money" type="TextureRect" parent="CanvasLayer/Background/VBoxContainer/MainArea/DataSideBar/Resources/ResourcesBody/MarginContainer/GridContainer"]
layout_mode = 2
texture = ExtResource("10_evdpk")
expand_mode = 2
stretch_mode = 4

[node name="MoneyAmount" type="Label" parent="CanvasLayer/Background/VBoxContainer/MainArea/DataSideBar/Resources/ResourcesBody/MarginContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 2
theme_override_font_sizes/font_size = 48
text = "100000.00"

[node name="Followers" type="TextureRect" parent="CanvasLayer/Background/VBoxContainer/MainArea/DataSideBar/Resources/ResourcesBody/MarginContainer/GridContainer"]
layout_mode = 2
texture = ExtResource("11_bx4e6")
expand_mode = 2
stretch_mode = 4

[node name="FollowersAmounts" type="Label" parent="CanvasLayer/Background/VBoxContainer/MainArea/DataSideBar/Resources/ResourcesBody/MarginContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "1"

[node name="Sponsors" type="TextureRect" parent="CanvasLayer/Background/VBoxContainer/MainArea/DataSideBar/Resources/ResourcesBody/MarginContainer/GridContainer"]
layout_mode = 2
texture = ExtResource("12_k8odw")
expand_mode = 2
stretch_mode = 4

[node name="SponsorsAmounts" type="Label" parent="CanvasLayer/Background/VBoxContainer/MainArea/DataSideBar/Resources/ResourcesBody/MarginContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "0"

[node name="Passives" type="VBoxContainer" parent="CanvasLayer/Background/VBoxContainer/MainArea/DataSideBar"]
layout_mode = 2

[node name="PassivesTitle" type="PanelContainer" parent="CanvasLayer/Background/VBoxContainer/MainArea/DataSideBar/Passives"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_scqh7")

[node name="Label" type="Label" parent="CanvasLayer/Background/VBoxContainer/MainArea/DataSideBar/Passives/PassivesTitle"]
layout_mode = 2
text = "Permanents"
horizontal_alignment = 1

[node name="PassivesBody" type="PanelContainer" parent="CanvasLayer/Background/VBoxContainer/MainArea/DataSideBar/Passives"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
theme_type_variation = &"EmptyPanel"

[node name="GridContainer" type="GridContainer" parent="CanvasLayer/Background/VBoxContainer/MainArea/DataSideBar/Passives/PassivesBody"]
layout_mode = 2
columns = 3

[node name="Permanent1" type="PanelContainer" parent="CanvasLayer/Background/VBoxContainer/MainArea/DataSideBar/Passives/PassivesBody/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Permanent2" type="PanelContainer" parent="CanvasLayer/Background/VBoxContainer/MainArea/DataSideBar/Passives/PassivesBody/GridContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 130)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Permanent3" type="PanelContainer" parent="CanvasLayer/Background/VBoxContainer/MainArea/DataSideBar/Passives/PassivesBody/GridContainer"]
unique_name_in_owner = true
clip_contents = true
custom_minimum_size = Vector2(150, 130)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Permanent4" type="PanelContainer" parent="CanvasLayer/Background/VBoxContainer/MainArea/DataSideBar/Passives/PassivesBody/GridContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 130)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Permanent5" type="PanelContainer" parent="CanvasLayer/Background/VBoxContainer/MainArea/DataSideBar/Passives/PassivesBody/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Permanent6" type="PanelContainer" parent="CanvasLayer/Background/VBoxContainer/MainArea/DataSideBar/Passives/PassivesBody/GridContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 130)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Permanent7" type="PanelContainer" parent="CanvasLayer/Background/VBoxContainer/MainArea/DataSideBar/Passives/PassivesBody/GridContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 130)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Permanent8" type="PanelContainer" parent="CanvasLayer/Background/VBoxContainer/MainArea/DataSideBar/Passives/PassivesBody/GridContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 130)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Permanent9" type="PanelContainer" parent="CanvasLayer/Background/VBoxContainer/MainArea/DataSideBar/Passives/PassivesBody/GridContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 130)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[connection signal="mouse_entered" from="CanvasLayer/Background/VBoxContainer/WindowToolBar/HBoxContainer/Close" to="." method="_on_close_mouse_entered"]
[connection signal="pressed" from="CanvasLayer/Background/VBoxContainer/WindowToolBar/HBoxContainer/Close" to="." method="_on_close_pressed"]
[connection signal="mouse_entered" from="CanvasLayer/Background/VBoxContainer/ToolBar/HBoxContainer/Home" to="." method="_on_home_mouse_entered"]
[connection signal="pressed" from="CanvasLayer/Background/VBoxContainer/ToolBar/HBoxContainer/Home" to="." method="_on_home_pressed"]
[connection signal="mouse_entered" from="CanvasLayer/Background/VBoxContainer/ToolBar/HBoxContainer/Save" to="." method="_on_save_mouse_entered"]
[connection signal="pressed" from="CanvasLayer/Background/VBoxContainer/ToolBar/HBoxContainer/Save" to="." method="_on_save_pressed"]
[connection signal="mouse_entered" from="CanvasLayer/Background/VBoxContainer/ToolBar/HBoxContainer/Settings" to="." method="_on_settings_mouse_entered"]
[connection signal="pressed" from="CanvasLayer/Background/VBoxContainer/ToolBar/HBoxContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="mouse_entered" from="CanvasLayer/Background/VBoxContainer/ToolBar/HBoxContainer/Help" to="." method="_on_help_mouse_entered"]
[connection signal="pressed" from="CanvasLayer/Background/VBoxContainer/ToolBar/HBoxContainer/Help" to="." method="_on_help_pressed"]
[connection signal="mouse_entered" from="CanvasLayer/Background/VBoxContainer/MainArea/InteractiveZone/PostSelection/PostSelectionBody/PostSelection/Redraw" to="." method="_on_redraw_mouse_entered"]
[connection signal="pressed" from="CanvasLayer/Background/VBoxContainer/MainArea/InteractiveZone/PostSelection/PostSelectionBody/PostSelection/Redraw" to="." method="draw_posts"]
[connection signal="mouse_entered" from="CanvasLayer/Background/VBoxContainer/MainArea/InteractiveZone/PostSelection/PostSelectionBody/PostSelection/Post!" to="." method="_on_post_mouse_entered"]
[connection signal="pressed" from="CanvasLayer/Background/VBoxContainer/MainArea/InteractiveZone/PostSelection/PostSelectionBody/PostSelection/Post!" to="." method="play"]
